# otus_hw4

./: CMakeLists.txt  README.md
black_box/: Application.cpp  PainterImpl.hpp  View.hpp
components/ball/: Ball.cpp  Ball.hpp
components/painter/: Painter.cpp
components/physics/: Physics.cpp
components/world/: World.cpp
